# CausalEnvGeneration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_docs_to_rtd.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/data/: dataset-event.md  dataset-raw.md  index.md
docs/source/getting-started/: installation.md
docs/source/inference/: index.md
docs/source/overview/: getting-started.md  index.md  installation.md  quick-simulator.md
docs/source/simulator/: design-principles.md  general-information.md  index.md  play.md
docs/source/train/: index.md
extract/: call.py  frame.py  prompt.py  utils.py
minestudio/benchmark/auto_eval/: README.md  batch_video_rating.py  mcu_task_description.json  rule_generation.py  video_comparison.py
minestudio/data/: __init__.py  datamodule.py
minestudio/data/minecraft/: core.py  dataset.py  dataset_event.py  dataset_raw.py  demo.py  part_raw.py  utils.py
minestudio/inference/: __init__.py  example.py  pipeline.py
minestudio/inference/filter/: __init__.py  base_filter.py
minestudio/inference/generator/: __init__.py  base_generator.py  mine_generator.py
minestudio/inference/recorder/: base_recorder.py
minestudio/inference/summarizer/: __init__.py  base_summarizer.py
minestudio/models/: __init__.py  base_agent.py  base_policy.py
minestudio/models/groot_one/: body.py
minestudio/models/openai_vpt/: __init__.py  body.py
minestudio/simulator/: __init__.py  entry.py
minestudio/train/: __init__.py  example.py  trainer.py
(+215 files in other folders)
