[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minestudio"
version="0.0.1"
description = "A simple and efficient Minecraft development kit."
dependencies = [
    "av",
    "opencv-python",
    "setuptools",
    "tqdm",
    "numpy",
    "requests",
    "ipython",
    "typing",
    "gym",
    "gym3",
    "gymnasium",
    "hydra_colorlog", 
    "hydra-core==1.3.1",
    "lmdb",
    "wandb",
    "torch",
    "lightning",
    "scipy",
    "rich",
    "cuda-python",
    "diskcache", 
    "albumentations", 
    "einops", 
    "timm",
    "transformers", 
]
authors = [
    {name="CraftJarvis", email="craftjarvis@outlook.com"},
    {name="caishaofei", email="caishaofei@stu.pku.edu.cn"}
]
requires-python = ">=3.10"

[options.packages.find]
where = "minestudio"

[tool.setuptools.packages.find]
include = ['minestudio*']

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
